# mcp_client_console

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  run_app.sh  run_app_uv.sh  run_tests.py  setup_dev.sh
.github/workflows/: ci.yml
mcp_client_console/: __init__.py
mcp_client_console/connections/: __init__.py  base.py  factory.py  http_connection.py  sse_connection.py  stdio_connection.py
mcp_client_console/core/: __init__.py  client.py  exceptions.py  models.py
mcp_client_console/ui/: __init__.py  streamlit_app.py
mcp_client_console/utils/: __init__.py  error_handler.py  logger.py
tests/: __init__.py
tests/unit/: __init__.py  test_base_connection.py  test_client.py  test_connection_factory.py  test_connections.py  test_error_handler.py  test_exceptions.py
